# flumen

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml
src/flumen/frequency/: datetime.py
src/flumen/models/: frequency.py  item.py  timeseries.py
src/flumen/storage/: array.py  big_array.py  dict.py  index_array.py
src/flumen/store/: base.py  calenadar.py  entity.py  field.py  timeseries.py
src/flumen/utils/: path.py
tests/: conftest.py
tests/frequency/: test_datetime.py
tests/models/: test_frequency.py  test_item.py  test_timeseries.py
tests/storage/: test_array.py  test_big_array.py  test_dict.py  test_index_array.py
tests/store/: test_calendar.py  test_entity.py  test_field.py  test_timeseries.py
