[project]
name = "flumen"
version = "0.1.0"
description = ""
authors = [
    {name = "Chaoying", email = "chaoying2022@gmail.com"},
]
dependencies = [
    "pandas>=1.4.4",
    "pydantic>=1.10.2",
    "aenum>=3.1.11",
    "pandas-market-calendars>=4.0",
    "pendulum>=2.1.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.3",
    "pre-commit>=2.20.0",
    "ipython>=8.5.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.19.0",
]

[tool.isort]
profile = "black"
atomic = true
filter_files = true

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = [
    "tests/",
]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.coverage.report]
exclude_lines =["pragma: not covered", "@overload"]

[tool.mypy]
warn_unused_ignores = true
